# random-fourier-features

./: .gitignore  LICENSE  Makefile  README.md  RandomFourierFeatures.py  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample.py
articles/: Makefile  README.md  rff_for_gaussian_process.tex
data/: convert_mnist_to_npy.py  download_and_convert_mnist.py
dataset/cifar10/: download_and_convert_cifar10.py
docs/: api_reference.html  api_reference_RFFBatchSVC.html  api_reference_RFFCCA.html  api_reference_RFFGPC.html  api_reference_RFFGPR.html  api_reference_RFFPCA.html  api_reference_RFFRegression.html  api_reference_RFFSVC.html  api_reference_RFFSVR.html  api_reference_explainers.html  api_reference_tuners.html  index.html  tutorials.html
docs/css/: style.css
documents/: Makefile  rff_for_gaussian_process.tex  tiskw.sty  tiskwdoc.sty
etc/: output_main_ksvm.txt  output_main_orf.txt  output_main_rff.txt  output_main_rff_batch.txt  output_main_rff_batch_plot.py  output_main_svm_kernel.txt  output_main_svm_rff.txt
examples/: README.md
rfflearn/: rfflearn_common.py  utils.py
sample_data/: gen_data.py  xs.npy  ys.npy
source/: FastInferenceRFF.c  Makefile  PyFastInferenceRFF.py  PyRFF.py  PyRFF_GPU.py  PyRFF_GPU.py.bak  RandomFourierFeatures.py  Timer.py  Utils.py  cosine_table.h  main_ksvm.py  main_orf.py  main_reg_rff.py  main_rff.py  main_rff_batch.py  main_svm_kernel.py  main_svm_orf.py  main_svm_rff.py  run.sh
tests/: cca_for_artificial_data.py  feature_importances_for_california_housing.py  gpc_for_mnist.py  gpr_sparse_data.py  least_square_regression.py  optuna_for_california_housing.py  pca_for_swissroll.py  svc_for_mnist.py  svc_train_cpu_predict_gpu.py  svr_sparse_data.py
(+103 files in other folders)
